--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -65,6 +65,8 @@
                                     <ul class="project-span-box span-box" id="span-box-{{itemtop.ID}}">
                                         <li style="line-height: 30px;height: 30px;" class="deletedepent" id="deletedepent-{{itemtop.ID}}"><a data="18220" class="deleteApartment">删除房源</a></li>
                                         <li style="line-height: 30px;height: 30px;" class="editdepent" id="editdepent-{{itemtop.ID}}"><a class="view-del-project">编辑房源</a></li>
+                                        <li style="line-height: 30px;height: 30px;" class="addcontract" id="addcontract-{{itemtop.ID}}"><a class="view-del-project">登记租客</a></li>
+                                       
                                     </ul>
                                 </li>
                                 <li><span>{{formatter(itemtop.Price,"暂未定价")}}</span></li>
