--- a/src/views/house/h-house/index.html
+++ b/src/views/house/h-house/index.html
@@ -18,6 +18,9 @@
                         <i class="layui-icon" style="font-size:27px;">&#xe61a;</i>
                     </span>
                     <div class="layui-btn-group caidan-btn">
+                        <button class="layui-btn layui-btn-primary layui-btn-sm addcontract" id="addcontract-{{item.house.Id}}">
+                            <i class="layui-icon">&#xe608;</i> 登记租客
+                         </button>
                         <button class="layui-btn layui-btn-primary layui-btn-sm addhouse" id="addhouse-{{item.house.Id}}">
                             <i class="layui-icon">&#xe608;</i> 添加房间
                         </button>
