--- a/src/views/house/z-house/index.html
+++ b/src/views/house/z-house/index.html
@@ -22,6 +22,7 @@
                             <ul class="project-span-box span-box" id="span-box-{{itemtop.Id}}">
                                 <li style="line-height: 30px;height: 30px;" class="deletedepent" id="deletedepent-{{itemtop.Id}}"><a data="18220" class="deleteApartment">删除房间</a></li>
                                 <li style="line-height: 30px;height: 30px;" class="editdepent" id="editdepent-{{itemtop.Id}}"><a class="view-del-project">编辑房间</a></li>
+                            
                             </ul>
                         </li>
                       
@@ -45,6 +46,7 @@
                             <ul class="project-span-box span-box" id="span-box-{{itemtop.Id}}">
                                 <li style="line-height: 30px;height: 30px;" class="deletedepent" id="deletedepent-{{itemtop.Id}}"><a data="18220" class="deleteApartment">删除房源</a></li>
                                 <li style="line-height: 30px;height: 30px;" class="editdepent" id="editdepent-{{itemtop.Id}}"><a class="view-del-project">编辑房源</a></li>
+                                <li style="line-height: 30px;height: 30px;" class="addcontract" id="addcontract-{{itemtop.Id}}"><a class="view-del-project">租客登记</a></li>
                             </ul>
                         </li>
                       
