--- a/src/views/msystem/QuickAdd.html
+++ b/src/views/msystem/QuickAdd.html
@@ -17,7 +17,7 @@
          type: 1,
          title: '添加合租房源',
          skin: 'two-layer',             
-         shadeClose: true,//开启遮罩关闭              
+         shadeClose: false,//开启遮罩关闭              
          maxmin: true, //开启最大化最小化按钮
          area:['1100px', '90%'],
          success: function(layero,index){
@@ -36,7 +36,7 @@
          type: 1,
          title: '添加整租房源',
          skin: 'two-layer',             
-         shadeClose: true,//开启遮罩关闭              
+         shadeClose: false,//开启遮罩关闭              
          maxmin: true, //开启最大化最小化按钮
          area:['1100px', '90%'],
          success: function(layero,index){
@@ -56,7 +56,7 @@
          type: 1,
          title: '添加独栋房源',
          skin: 'two-layer',             
-         shadeClose: true,//开启遮罩关闭              
+         shadeClose: false,//开启遮罩关闭              
          maxmin: true, //开启最大化最小化按钮
          area: ['800px', '70%'],
          maxHeight: '90%',
@@ -75,7 +75,7 @@
          type: 1,
          title: '添加合同',
          skin: 'two-layer',             
-         shadeClose: true,//开启遮罩关闭              
+         shadeClose: false,//开启遮罩关闭              
          maxmin: true, //开启最大化最小化按钮
          area:['1100px', '90%'],
          success: function(layero,index){
