--- a/src/views/house/rz/index.html
+++ b/src/views/house/rz/index.html
@@ -11,17 +11,19 @@
         <div class="m-search">
                 <form class="layui-form hcs-form" action="" lay-filter="search" id="guest-search-form">
                      <div class="m-search-item" style="width:200px;">
-                           <input type="text" name="Content" autocomplete="off" class="layui-input" placeholder="小区名,期望地址，姓名，手机号" id="CellName">
+                           <input type="text" name="house" autocomplete="off" class="layui-input" placeholder="小区名,地址" id="house">
                      </div>
-                    
+                     <div class="m-search-item" style="width:200px;">
+                        <input type="text" name="content" autocomplete="off" class="layui-input" placeholder="内容" id="content">
+                     </div>
+                 
                     <div class="m-search-item">
-                        <select name="Source" lay-verify="" id="Source">                          
-                           <option value="来电">来电</option>
-                           <option value="官网" >官网</option>
-                           <option value="58" >58</option>
-                           <option value="安居客" >安居客</option>
-                           <option value="朋友介绍" >朋友介绍</option>
-                           <option value="百度租房" >百度租房</option>
+                        <select name="type" lay-verify="" id="type">                          
+                           <option value="租客合同操作">租客合同操作</option>
+                           <option value="业主合同操作" >业主合同操作</option>
+                           <option value="新增房源" >新增房源</option>
+                           <option value="编辑房源" >编辑房源</option>
+                         
                     </select>  
                     </div>
                     <div class="m-search-item" >
