--- a/src/views/set/base/money.html
+++ b/src/views/set/base/money.html
@@ -1,100 +1,52 @@
 
 <title>系统设置</title>
 <script src="../../../../Scripts/order_business.js"></script>
+<script src="../../../../Scripts/hmenu.js"></script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
-<style>
-    ul.setting-catagery-list, .setting-user-layout ul.setting-catagery-list {
-    margin-top: 10px;
-}
-ul {
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-:before {
-    box-sizing: border-box;
-}
-.permit-layout ul.setting-catagery-list li a, .setting-layout ul.setting-catagery-list li a, .setting-user-layout ul.setting-catagery-list li a {
-    color: #999;
-    font-weight: 700;
-}
-li, .setting-user-layout ul.setting-catagery-list li {
-    font-size: 16px;
-    color: #555;
-    line-height: 34px;
-}
-ul.setting-catagery-list {
-    margin-top: 10px;
-}
-.text-center {
-    text-align: center;
-}
- li a.current {
-    color: #555;
-    font-weight: 700;
-}
-.rowtop{padding: 20px;background-color: #f7f9fa;}
-.i-title {
-    background: #fff;
-    border-bottom: 2px solid #eee;
-    margin-bottom: 15px;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -ms-flex-align: center;
-    align-items: center;
-    padding: 10px 15px;
-}
-.i-title .block {
-    padding: 0 15px;
-    text-align: center;
-    display: inline-block;
-    margin: 15px 30px 15px 0;
-}
-.i-title .block .number {
-    font-size: 26px;
-    color: #f3001a;
-}
-.left{float: left;}
-.divider {
-    width: 2px;
-    display: inline-block;
-    background: #eee;
-    height: 45px;
-    margin-right: 30px;
-}
-</style>
+<link href="../../../../Content/money.css" rel="stylesheet" />
 
 
+<script id="storescript" type="text/html">
+    <ul class="setting-catagery-list">
+            {{#  layui.each(d, function(index, item1){ }}
+            {{#  if(item1.name=="set/base/money"){ }}
+            <li><a lay-href="{{item1.name}}" class="current">{{item1.title}}</a></li>
+            {{#  }else{ }}
+            <li><a lay-href="{{item1.name}}">{{item1.title}}</a></li>
+            {{#  } }}
+           
+            {{# });   }}  
+            
+        </ul>
+</script>
+<script id="sysuereditscript" type="text/html">
+    <div class="left">
+        <div class="block">
+        <p class="number">
+        <div class="number" style="font-size: 16px; font-weight: 500; color: rgb(0, 0, 0);">  
+            <span style="font-size: 26px; color: rgb(243, 0, 26);"> 
+            <span id="count303216">{{d.orderamount}}</span> 
+            <span></span> </span>  
+        </div>
+        </p>
+        <p class="text"> 订单总金额(元)</p>
+         </div>
+         <div class="divider"></div>
+         <div class="block"><p class="number"><div class="number" style="font-size: 16px; font-weight: 500; color: rgb(0, 0, 0);">  <span style="font-size: 26px; color: rgb(243, 0, 26);"> <span id="count238924">{{d.Amount}}</span> <span></span> </span>  </div></p><p class="text"> 可转出余额(元)</p></div>
+         <div class="block padding-left-1">
+         <button  id="zbank" class="layui-btn layui-btn-danger">转出到银行卡</button>
+            </div><div class="divider"></div>
+     
+        
+    </div>
+</script>
 <div class="layui-row layui-col-space10 rowtop">
     <div class="layui-col-md1 text-center">
-        <ul class="setting-catagery-list">
-            <li><a lay-href="set/base/money" class="current">钱包总帐</a></li>
-            <li><a lay-href="set/base/tixian">提现记录</a></li>
-            <li><a lay-href="set/base/receive">收款账号</a></li>
-        </ul>
+           <div id="sysuer-edit-view"></div>
     </div>
     <div class="layui-col-md11">
             <div class="i-title">
-                <div class="left">
-                    <div class="block">
-                    <p class="number">
-                    <div class="number" style="font-size: 16px; font-weight: 500; color: rgb(0, 0, 0);">  
-                        <span style="font-size: 26px; color: rgb(243, 0, 26);"> 
-                        <span id="count303216">0.00</span> 
-                        <span></span> </span>  
-                    </div>
-                    </p>
-                    <p class="text"> 钱包余额(元)</p>
-                     </div>
-                     <div class="divider"></div>
-                     <div class="block"><p class="number"><div class="number" style="font-size: 16px; font-weight: 500; color: rgb(0, 0, 0);">  <span style="font-size: 26px; color: rgb(243, 0, 26);"> <span id="count238924">0.00</span> <span></span> </span>  </div></p><p class="text"> 可转出余额(元)</p></div><div class="block padding-left-1">
-                     <button  id="zbank" class="layui-btn layui-btn-danger">转出到银行卡</a>
-                        </div><div class="divider"></div><div class="block"><p class="number"><div class="number" style="font-size: 16px; font-weight: 500; color: rgb(0, 0, 0);">  <span style="font-size: 26px; color: rgb(243, 0, 26);"> <span id="count983032">0.00</span> <span></span> </span>  </div></p><p class="text"> 累计收益(元)</p>
-                    </div>
-                    <div class="block padding-left-1">
-                    </div>
-                </div>
+                    <div id="viewmoney"></div>
             </div>
             <div class="m-search" style="background-color: #e0e7ec;padding-top: 20px;padding-bottom: 20px;">
                     <form class="layui-form hcs-form" action="" lay-filter="search" id="guest-search-form">
