--- a/src/views/set/base/receive.html
+++ b/src/views/set/base/receive.html
@@ -1,102 +1,62 @@
 
 <title>系统设置</title>
+<script src="../../../../Scripts/receive_business.js"></script>
+<script src="../../../../Scripts/hmenu.js"></script>
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/money.css" rel="stylesheet" />
-<script src="../../../../Scripts/reveive_business.js"></script>
-
- <script id="storescript" type="text/html">
-   
-            <label class="layui-form-label">银行</label> 
-            <div class="layui-input-inline"> 
-                   <select name="bank" id="bank" lay-search>
-                           <option value="">请选择</option>
-                           {{#  layui.each(d, function(index, item1){ }}
-                           <option value="{{item1.Id}}">{{item1.Name}}</option>
-                           {{# });   }}   
-                   </select>
-            </div> 
-  
+<script id="sysuerbtnscribt" type="text/html">
+        {{#  layui.each(d, function(index, item){}}
+        {{# if(item.Multiple === 1){}}
+        <button class="layui-btn layui-btn-primary {{item.BtnNo}}" id="{{item.BtnNo}}" hturl="{{item.ButtonUrl}}">
+            <i class="layui-icon {{item.BtnIcon}}"></i>{{item.BtnName}}
+        </button>
+        {{# }}}
+        {{#   });   }}
 </script>
-<script id="sysuereditscript" type="text/html">
-    {{#   var doc = layui.htcsLG;}}
-    <form class="layui-form layui-form-pane hcs-form" action="">
-    <div class="layui-form" lay-filter="">
-      <div class="layui-form-item">
-        <label class="layui-form-label " style="width:120px;">支付宝账户名</label>
-        <div class="layui-input-inline">
-              <input type="text" name="zfbname" value="{{doc.ns(d.zfbname)}}"  autocomplete="off" placeholder=""  class="layui-input gray">
-        </div>
-        <label class="layui-form-label " style="width:120px;">支付宝账号</label>
-        <div class="layui-input-inline">
-              <input type="text" name="zfb" value="{{doc.ns(d.zfb)}}" lay-verify="" autocomplete="off" placeholder=""  class="layui-input gray">
-        </div>
-      </div>
-      <div class="layui-form-item">
-        <label class="layui-form-label" style="width:120px;">微信账户名</label>
-        <div class="layui-input-inline">
-              <input type="text" name="wxname" value="{{doc.ns(d.wxname)}}" lay-verify="" autocomplete="off" placeholder=""  class="layui-input gray">
-        </div>
-        <label class="layui-form-label" style="width:120px;">微信账号</label>
-              <div class="layui-input-inline">
-                      <input type="text" name="wx" value="{{doc.ns(d.wx)}}" lay-verify="" autocomplete="off" placeholder=""  class="layui-input gray">
-              </div>
-      </div>
-      <div class="layui-form-item">
-             <div id="viewstoreid"></div>
-              <label class="layui-form-label" style="width:120px;">银行卡账户名</label>
-                    <div class="layui-input-inline">
-                            <input type="text" name="name" value="{{doc.ns(d.name)}}" lay-verify="nickname" autocomplete="off" placeholder=""  class="layui-input">
-                    </div>
-              <label class="layui-form-label" style="width:120px;">银行账号</label>
-              <div class="layui-input-inline">
-                <input type="text" name="account" value="{{doc.ns(d.account)}}" lay-verify="" autocomplete="off" placeholder=""  class="layui-input">
-               </div>
-      </div>
-      <div class="layui-form-item">
-              <label class="layui-form-label" style="width:120px;">认证手机号</label>
-              <div class="layui-input-inline">
-                      <input type="text" value="{{doc.ns(d.phone)}}" name="phone" id="LAY-user-login-cellphone" lay-verify="phone" placeholder="" disabled class="layui-input">
-                  </div>
-      </div>
-      <div class="layui-form-item">
-              <label class="layui-form-label" style="width:120px;">验证码</label>
-              <div class="layui-input-inline">
-                    <input type="text" name="yzm" value="" lay-verify="required" autocomplete="off" placeholder=""  class="layui-input gray">
-              </div>
-              <div class="layui-input-inline">
-                      <button type="button" class="layui-btn layui-btn-primary layui-btn-fluid" id="LAY-user-getsmscode1">获取验证码</button>                                  </div>
-              
-      </div>  
-         <div class="layui-form-item">
-        <div class="layui-input-block">
-                <button class="layui-btn" id="save" lay-filter="save" lay-submit="">保存</button>        </div>
-      </div>
-    </div>
-  </form>
+<script id="storescript" type="text/html">
+        <ul class="setting-catagery-list">
+                {{#  layui.each(d, function(index, item1){ }}
+                {{#  if(item1.name=="set/base/receive"){ }}
+                <li><a lay-href="{{item1.name}}" class="current">{{item1.title}}</a></li>
+                {{#  }else{ }}
+                <li><a lay-href="{{item1.name}}">{{item1.title}}</a></li>
+                {{#  } }}
+               
+                {{# });   }}  
+                
+            </ul>
 </script>
 <div class="layui-row layui-col-space10 rowtop">
     <div class="layui-col-md1 text-center">
-        <ul class="setting-catagery-list">
-            <li><a lay-href="set/base/money" >钱包总帐</a></li>
-          
-            <li><a lay-href="set/base/tixian" >提现记录</a></li>
-            <li><a lay-href="set/base/receive" class="current">收款账号</a></li>
-        </ul>
+        <div id="sysuer-edit-view"></div>
     </div>
     <div class="layui-col-md11">
-            <div class="layui-card">
-                    <div class="layui-card-header">收款账户</div>
-                    <div class="layui-card-body" pad15>
-                            <div id="sysuer-edit-view" >
-                            </div>
-                    </div>
-                  </div>
+            
+           
+                 
+    <script id="guestbtnscribt" type="text/html">
+       
+    </script>
+   <script type="text/html" id="btnintable">
+        <ul class="layui-nav toolbar-nav">
+            <li class="layui-nav-item">
+                <a href="javascript:;" class="show-more">操作</a>
+                <dl class="layui-nav-child"></dl>
+            </li>
+        </ul>
+</script>
+    <div id="toolbar">
+        <div class="layui-btn-group">
+            <div id="guest-button-view" style="overflow:hidden;"></div>
+           
+        </div>
+    </div>
+    <div class="layui-tab layui-tab-card" lay-filter="tabletab" style="background-color: white;">
+        
+        <div class="layui-tab-content" style="padding:0px;margin:0px;">
+            <table id="guest-main-table" lay-filter="demoEvent"></table>
+        </div>
+    </div>
     </div>
    
   </div>
-  <script>
-    layui.use(['user'], function(){
-
-    })
-</script>
-  
