--- a/src/views/house/h-house/publicview.html
+++ b/src/views/house/h-house/publicview.html
@@ -8,6 +8,7 @@ img {
     vertical-align: middle; border: 0;
 }.house-img {
     height: 140px;
+    width: 140px;
 }
 .edit-house-info-dialog .house-img-all {
     width: 100%;
