--- a/src/views/house/h-house/InterView.html
+++ b/src/views/house/h-house/InterView.html
@@ -1,19 +1,18 @@
-
 @{
-    Layout = null;
+Layout = null;
 }
-
 <!DOCTYPE html>
-
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>InterView</title>
     <link href="../../../../Content/Home.css" rel="stylesheet" />
-    <link href="../../../../Content/hsc-form.css" rel="stylesheet" />  
+    <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
     <style>
         .buttonleft{margin-left: 30px;}
-    </style> 
+        .house-img{width: 140px;height: 140px;cursor: pointer;}
+    </style>
     <script>
         var houseid=0;
          function LoadData(id,ParentRoomid,layerindex){
@@ -41,47 +40,50 @@
              var imageurl="";
              //查询特色信息
              doc.objectQuery(tsurl, para, function (data) {
+
                 alldata.push(data.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
-                imageurl=alldata[1].PrivateImage;
+                // imageurl=alldata[1].PrivateImage;
                 doc.objectQuery(gqurl, { "Id": ParentRoomid }, function (data) {
-                alldata.push(data.numberData);
-                imageurl+=alldata[2].PublicImg;
-                var arr=new Array();
-                if(imageurl!=null){
-                imageurl=imageurl.substring(0,imageurl.length-1);
-                arr=imageurl.split(';');
-                }
-                alldata.push(arr);
-                laytpl(getTpl).render(alldata, function (html) {
-                view.innerHTML = html;
-                form.render('');
-             });
-             $(".buttonleft").click(function (index,value) {
-           debugger;
-         
-           layer.open({
-           type: 1,
-           id:"domedit1",
-           title: '房源编辑',
-           skin: 'two-layer',
-           anim: -1,
-           shade: .1,
-           shadeClose: true,
-           maxmin: true,
-           area: ['1120px', '90%'],
-           success: function (layero, index) {
-            view1("domedit1").render('house/h-house/edit', {
-                   id: id,
-                   ParentRoomid:ParentRoomid,
-                   layerindex:index
-               });
-           }
-        });
-        });
-             });
-            });
+                  alldata.push(data.numberData);
+                  imageurl += alldata[2].PublicImg;
+                  var arr=new Array();
+                  if(imageurl!=null){
+                    imageurl=imageurl.substring(0,imageurl.length-1);
+                    arr=imageurl.split(';');
+                  }
+                  alldata.push(arr);
+                  laytpl(getTpl).render(alldata, function (html) {
+                      view.innerHTML = html;
+                      form.render('');
+                      layer.photos({
+                        photos: '#himage'
+                        ,anim: 5
+                      });
+                   });
+                   $(".buttonleft").click(function (index,value) {
+                     layer.open({
+                       type: 1,
+                       id:"domedit1",
+                       title: '房源编辑',
+                       skin: 'two-layer',
+                       anim: -1,
+                       shade: .1,
+                       shadeClose: true,
+                       maxmin: true,
+                       area: ['1120px', '90%'],
+                       success: function (layero, index) {
+                        view1("domedit1").render('house/h-house/edit', {
+                             id: id,
+                             ParentRoomid:ParentRoomid,
+                             layerindex:index
+                         });
+                       }
+                    });
+                  });
+                });
+              });
             });
             element.on('tab(test1)', function(){
                var layid=this.getAttribute('lay-id');
@@ -127,7 +129,6 @@
         var data = obj.data,
             layEvent = obj.event,
             url = $(this).data('url');
-            debugger;
             if (layEvent === 'zcontract-tuizu-btn') { //退租
                 if(data.Status!=1&&data.Status!=5){
                     layer.msg("合同状态不为待签约和在租中不能进行退租操作");
@@ -188,7 +189,7 @@
               
             });
             function formatterstatus(value) {
-        //0 不限 1预订 4待搬入 5在租 6已到期 7 已退租 8以作废 9 财务审核中	
+        //0 不限 1预订 4待搬入 5在租 6已到期 7 已退租 8以作废 9 财务审核中 
        if (value.Status == 4) {
            return '<div><span style="padding:10px;background-color:#1bb974;color:#ffffff;border-radius:5px;">待搬入</span></div>'
        }
@@ -217,27 +218,27 @@ function formatterhouse(value) {
    }
    function formattertime(value) {
     
-       return '<div>' +util.toDateString(value.BeginTime,'yyyy年MM月dd日')	  + "→" + util.toDateString(value.EndTime,'yyyy年MM月dd日') + '</div>';
+       return '<div>' +util.toDateString(value.BeginTime,'yyyy年MM月dd日')   + "→" + util.toDateString(value.EndTime,'yyyy年MM月dd日') + '</div>';
 }
 function formatterpinlv(value) {
     return '<div>' +value.Pinlv + '月一付</div>';
 }
 function formatterzhouqi(value) {
-            debugger;
+            // debugger;
             if(value.BeginTime==null||value.EndTime==null){
                 return '<div>'+'</div>'
             }
             if(value.BeginTime=="0001-01-01 00:00:00"||value.EndTime=="0001-01-01 00:00:00"){
                 return '<div>'+'</div>'
             }
-            debugger;
+            // debugger;
             var begintime=util.toDateString(value.BeginTime, 'yyyy-MM-dd');
             var endtime=util.toDateString(value.EndTime, 'yyyy-MM-dd');
             return '<div>' + begintime+" - "+endtime + '</div>';
         }
         
         function formadaoqi(value) {
-            debugger;
+            // debugger;
             var day=0;
                       
             if(value.ShouldReceive == null){
@@ -320,39 +321,33 @@ function formatterzhouqi(value) {
         }
         return util.toDateString(value.ShouldReceive, 'yyyy-MM-dd')
     }
-</script>    
-   
-
-</head>
-<body>
-       
-        
-<script id="zcontractbtnscribt" type="text/html">
-           
 </script>
-        <script type="text/html" id="btnintable">
-            <ul class="layui-nav toolbar-nav">
+</head>
+
+<body>
+    <script id="zcontractbtnscribt" type="text/html">
+    </script>
+    <script type="text/html" id="btnintable">
+        <ul class="layui-nav toolbar-nav">
                 <li class="layui-nav-item">
                     <a href="javascript:;" class="show-more">操作</a>
                     <dl class="layui-nav-child"></dl>
                 </li>
             </ul>
         </script>
-        <div id="toolbar">
-            <div class="layui-btn-group">
-                <div id="zcontract-button-view" style="overflow:hidden;"></div>
-                
-            </div>
+    <div id="toolbar">
+        <div class="layui-btn-group">
+            <div id="zcontract-button-view" style="overflow:hidden;"></div>
         </div>
-  <script type="text/html" template >
-    {{#  LoadData(d.params.id,d.params.ParentRoomid,d.params.layerindex)}}
+    </div>
+    <script type="text/html" template>
+        {{#  LoadData(d.params.id,d.params.ParentRoomid,d.params.layerindex)}}
   </script>
     <div class="layui-tab layui-tab-card" style="margin:0px;" lay-filter="test1">
         <ul class="layui-tab-title">
             <li class="layui-this" lay-id="111">房源信息</li>
             <li lay-id="222">租客合同</li>
             <li lay-id="333">日志</li>
-           
         </ul>
         <div class="layui-tab-content">
             <div class="layui-tab-item layui-show" style="padding: 10px;overflow: hidden;">
@@ -482,7 +477,7 @@ function formatterzhouqi(value) {
                                    
                                    <div class="layui-row" id="himage">
                                          {{#  layui.each(d[3], function(index, item1){ }}
-                                         <div class="layui-col-xs2">
+                                         <div class="layui-col-xs3">
                                                  <div>
                                                   <img class="house-img-all house-img hand" src="{{imgurl1}}{{item1}}">
                                                  </div>
@@ -491,28 +486,26 @@ function formatterzhouqi(value) {
                                     </div>
                          </form> 
                     </script>
-                    <div id="house-edit-view">
-                    </div>
+                <div id="house-edit-view">
+                </div>
             </div>
             <div class="layui-tab-item">
-                    <div class="layui-tab layui-tab-brief" lay-filter="tabletab">
-                            <ul class="layui-tab-title" style="margin-bottom:0;">
-                                <li value="0" class="layui-this">全部合同</li>
-                                <li value="5" >在租合同</li>
-                                <li value="7" class="">历史合同</li>
-                                
-                            </ul>
-                            <div class="layui-tab-content" style="padding:0px;margin:0px;">
-                                <table id="zcontract-index-table" lay-filter="demoEvent"></table>
-                            </div>
+                <div class="layui-tab layui-tab-brief" lay-filter="tabletab">
+                    <ul class="layui-tab-title" style="margin-bottom:0;">
+                        <li value="0" class="layui-this">全部合同</li>
+                        <li value="5">在租合同</li>
+                        <li value="7" class="">历史合同</li>
+                    </ul>
+                    <div class="layui-tab-content" style="padding:0px;margin:0px;">
+                        <table id="zcontract-index-table" lay-filter="demoEvent"></table>
                     </div>
+                </div>
             </div>
             <div class="layui-tab-item" style="height:700px;">
-                
                 <iframe src="" isloaded="true" frameborder="0" class="house_iframe"></iframe>
             </div>
         </div>
-        
     </div>
 </body>
+
 </html>
