--- a/src/views/house/h-house/edit.html
+++ b/src/views/house/h-house/edit.html
@@ -3,6 +3,7 @@
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 
 <script>
+       var imageurl="";
       function LoadData(id,tableid,layerindex){
         layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form'], function () {
             var laytpl = layui.laytpl;
@@ -25,6 +26,14 @@
                 alldata.push(result.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
+                var image=alldata[1].PublicImg;
+                var arr=new Array();
+                    if(image!=null){
+                    image=image.substring(0,image.length-1);
+                    arr=image.split(';');
+                }
+                alldata.push(arr);
+                imageurl=alldata[1].PrivateImage;
                 laytpl(getTpl).render(alldata, function (html) {
                 view.innerHTML = html;
                 doc.tjgd();
@@ -32,6 +41,34 @@
                 $("#Orientation").val(alldata[1].Orientation);
                 $("#Huxing").val(data.numberData.Huxing);
                 form.render('');
+               
+                debugger;
+                $("#addimage").click(function () {
+                    debugger;
+                 var addid="layui-contract-addimage";
+                 var view = layui.view;
+                 layer.open({
+                    id:addid,
+                    type: 1,
+                    title: '上传文件',
+                    skin: 'two-layer',
+                    //anim: 4,
+                    shadeClose: true,//开启遮罩关闭
+                    //shade: ['0.5'],
+                    maxmin: true, //开启最大化最小化按钮
+                    area:['800px', '500px'],
+                    success: function(layero,index){
+                        view(this.id).render('upload/index', {
+                            img:imageurl,
+                            type:1,
+                            layerindex:index
+                           
+                        });
+                        
+                      }
+                });  
+               
+               }); 
              });
              });   
             });
@@ -42,6 +79,7 @@
             data.field.PrivatePeibei=arr;
             var arr1=doc.getcheckbox("#tese");
             data.field.PrivateTeshe=arr1;
+            data.field.PrivateImage=imageurl;
             var saveoption={
             url:'api/House/editsavepentHouse',
             data:data.field,
@@ -60,14 +98,39 @@
             layer.close(layerindex);
             return false;
          });
+        
         });
+      
       }
+      function complteimg(name,type, number){
+            debugger;
+            layui.use(['jquery'], function () {
+            var $ = layui.jquery;
+            imageurl=name;
+            var arr=parsearry(name);
+            var dom="";
+            var setter = layui.setter;
+            var imgurl = setter.imgurl;
+            $.each(arr,function(index,value){
+                 dom+='<div class="layui-col-xs2"><div><img class="house-img-all house-img hand" src="'+imgurl+value+'"></div></div>';
+            });
+           $("#himage").html(dom);
+        });
+       }
+       function  parsearry(img){
+        var arr=new Array();
+        if(img!=null){
+            img=img.substring(0,img.length-1);
+            arr=img.split(';');
+        }
+        return arr;
+       }  
 </script>
 <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
 </script>
- <script id="billeditscript1" type="text/html">
-    {{# var doc= layui.htcsLG; }}
+<script id="billeditscript1" type="text/html">
+    {{#  var setter = layui.setter;var imgurl = setter.imgurl;var doc = layui.htcsLG; }}
     <div class="form-content">
             <input type="text" name="Id" id="Id" autocomplete="off" class="layui-input" value="{{d[1].Id}}" style="display:none" /> 
              <div class="layui-form-item"> 
@@ -153,6 +216,24 @@
                   </div>
                   </div>
              </div> 
+             <div class="title"> 
+                <h3 class="red"> 图片信息</h3> 
+               </div> 
+               <div class="layui-form-item"> 
+                <div class="layui-inline"> 
+                   <a class="layui-btn layui-btn-warm" id="addimage">添加/修改/删除 照片</a>
+                </div> 
+               </div>  
+               <div class="layui-row" id="himage">
+                     {{#  layui.each(d[2], function(index, item1){ }}
+                     <div class="layui-col-xs2">
+                             <div>
+                              <img class="house-img-all house-img hand" src="{{imgurl}}{{item1}}">
+                             </div>
+                     </div>
+                     {{# });   }}                          
+                </div>
+
             </div> 
           </div>
 </script>
