--- a/src/views/house/z-house/edit.html
+++ b/src/views/house/z-house/edit.html
@@ -3,6 +3,7 @@
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
 
 <script>
+        var imageurl="";
       function LoadData(id,tableid,layerindex){
         layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form'], function () {
             var laytpl = layui.laytpl;
@@ -25,6 +26,14 @@
                 alldata.push(result.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
+                var image=alldata[1].PublicImg;
+                var arr=new Array();
+                    if(image!=null){
+                    image=image.substring(0,image.length-1);
+                    arr=image.split(';');
+                }
+                alldata.push(arr);
+                imageurl=alldata[1].PublicImg;
                 laytpl(getTpl).render(alldata, function (html) {
                 view.innerHTML = html;
                 $("#Status").val(alldata[1].Status);
@@ -32,12 +41,38 @@
                 $("#Orientation").val(alldata[1].Orientation);
                 $("#HouseKeeper").val(alldata[1].HouseKeeper);
                 form.render('');
+                doc.tjgd();
+                $("#addimage").click(function () {
+                    debugger;
+                 var addid="layui-contract-addimage";
+                 var view = layui.view;
+                 layer.open({
+                    id:addid,
+                    type: 1,
+                    title: '上传文件',
+                    skin: 'two-layer',
+                    //anim: 4,
+                    shadeClose: true,//开启遮罩关闭
+                    //shade: ['0.5'],
+                    maxmin: true, //开启最大化最小化按钮
+                    area:['800px', '500px'],
+                    success: function(layero,index){
+                        view(this.id).render('upload/index', {
+                            img:imageurl,
+                            type:1,
+                            layerindex:index
+                           
+                        });
+                        
+                      }
+                });  
+               
+               }); 
                 //小区提示列表
                 $('#CellName1').devbridgeAutocomplete({
                     lookup: function (query, done) {
                         debugger;
                         var querydata = {};
-                        
                         querydata.xiaoqu = query;
                         querydata.city =  alldata[1].CityName;
                         querydata.PageSize = 100;
@@ -101,6 +136,7 @@
             data.field.PublicPeibei=arr;
             var arr1=doc.getcheckbox("#tese");
             data.field.PublicTeshe=arr1;
+            data.field.PublicImg=imageurl;
             var saveoption={
             url:'api/House/SaveHouse2',
             data:data.field,
@@ -122,12 +158,35 @@
          });
         });
       }
+      function complteimg(name,type, number){
+            debugger;
+            layui.use(['jquery'], function () {
+            var $ = layui.jquery;
+            imageurl=name;
+            var arr=parsearry(name);
+            var dom="";
+            var setter = layui.setter;
+            var imgurl = setter.imgurl;
+            $.each(arr,function(index,value){
+                 dom+='<div class="layui-col-xs2"><div><img class="house-img-all house-img hand" src="'+imgurl+value+'"></div></div>';
+            });
+           $("#himage").html(dom);
+        });
+       }
+       function  parsearry(img){
+        var arr=new Array();
+        if(img!=null){
+            img=img.substring(0,img.length-1);
+            arr=img.split(';');
+        }
+        return arr;
+       }  
 </script>
 <script type="text/html" template >
     {{#  LoadData(d.params.id,d.params.tableid,d.params.layerindex)}}
 </script>
- <script id="billeditscript1" type="text/html">
-    {{# var doc= layui.htcsLG; }}
+<script id="billeditscript1" type="text/html">
+    {{#  var setter = layui.setter;var imgurl = setter.imgurl;var doc = layui.htcsLG; }}
     <div class="form-content">
             <input type="text" name="Id" id="Id" autocomplete="off" class="layui-input" value="{{d[1].Id}}" style="display:none" />
             <div class="title">
@@ -316,7 +375,26 @@
                    </div> 
                   </div> 
                </div> 
-            </div> 
+              
+    
+            </div>
+            <div class="title"> 
+                    <h3 class="red"> 图片信息</h3> 
+                   </div> 
+                   <div class="layui-form-item"> 
+                    <div class="layui-inline"> 
+                       <a class="layui-btn layui-btn-warm" id="addimage">添加/修改/删除 照片</a>
+                    </div> 
+                   </div>  
+                   <div class="layui-row" id="himage">
+                         {{#  layui.each(d[2], function(index, item1){ }}
+                         <div class="layui-col-xs2">
+                                 <div>
+                                  <img class="house-img-all house-img hand" src="{{imgurl}}{{item1}}">
+                                 </div>
+                         </div>
+                         {{# });   }}                          
+                    </div>
           </div>
 </script>        
 <form class="layui-form  layui-form-pane hcs-form form-panel" action="" >
