--- a/src/views/house/z-house/InterView.html
+++ b/src/views/house/z-house/InterView.html
@@ -14,18 +14,50 @@
     <style>
         .buttonleft{margin-left: 30px;}
         .buttonleft1{margin-left: 30px;}
+        .house-img{width: 140px;height: 140px;cursor: pointer;}
+        .img-wrap{
+          position: relative;
+          width: 140px;
+          height: 140px;
+          margin-right: 20px;
+          float: left;
+        }
+        .img-wrap .view,
+        .img-wrap .download{
+          position: absolute;
+          left: 5px;
+          font-size: 30px;
+          cursor: pointer;
+          color: #5FB878;
+          top: 4px;
+        }
+        .img-wrap .download{
+          right: 5px;
+          left: initial;
+        }
+        .opes{
+          position: absolute;
+          height: 40px;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          background-color: rgba(0,0,0,.5);
+        }
     </style> 
     <script>
          var houseid=0;
          function LoadData(id,ParentRoomid,layerindex){
             houseid=id;
-            layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form','element'], function(){
+            layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form','element', 'setter'], function(){
             var url = "api/House/publicHousexq";
             var para={"teseorpeibei":0,"type":2};
             var tsurl='api/BaseData/Query';
             var laytpl = layui.laytpl;
             var doc = layui.htcsLG;
             var util = layui.util;
+            var setter = layui.setter;
+            var baseurl = setter.baseurl;
+            var imgurl1 = setter.imgurl;
             var paradata = { "Id": id, "ParentRoomid": ParentRoomid };
             var getTpl = housescript.innerHTML
              , view = document.getElementById('house-edit-view');
@@ -35,36 +67,58 @@
              var view1 = layui.view;
              var contract=0;
              var alldata=[];
+             var imageurl="";
              //查询特色信息
              doc.objectQuery(tsurl, para, function (data) {
                 alldata.push(data.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
-                laytpl(getTpl).render(alldata, function (html) {
-                view.innerHTML = html;
-                form.render('');
-             });
+                  imageurl += alldata[1].PublicImg;
+                  var arr=new Array();
+                  if(imageurl!=null){
+                    imageurl=imageurl.substring(0,imageurl.length-1);
+                    arr=imageurl.split(';');
+                  }
+                  alldata.push(arr);
+                  alldata.imgurl1 = imgurl1;
+                  laytpl(getTpl).render(alldata, function (html) {
+                    view.innerHTML = html;
+                    form.render('');
+                    layer.photos({
+                        photos: '#himage'
+                        ,anim: 5
+                      });
+                      //预览
+                      $('#himage').on('click', '.view', function(){
+                        $(this).parents('.img-wrap').find('img').click();
+                      });
+                      //下载
+                      $('#himage').on('click', '.download', function(){
+                        var file = $(this).parents('.img-wrap').find('img').attr('alt');
+                        location.href = baseurl + 'HtcsExcel/DownloadFile?filename=' + file;
+                      });
+                 });
+                
              $(".buttonleft").click(function (index,value) {
-           debugger;
          
-           layer.open({
-           type: 1,
-           id:"domedit1",
-           title: '房源编辑',
-           skin: 'two-layer',
-           anim: -1,
-           shade: .1,
-           shadeClose: true,
-           maxmin: true,
-           area: ['1120px', '90%'],
-           success: function (layero, index) {
-            view1("domedit1").render('house/z-house/edit', {
-                   id: id,
-                   ParentRoomid:ParentRoomid,
-                   layerindex:index
-               });
-           }
-        });
+               layer.open({
+               type: 1,
+               id:"domedit1",
+               title: '房源编辑',
+               skin: 'two-layer',
+               anim: -1,
+               shade: .1,
+               shadeClose: true,
+               maxmin: true,
+               area: ['1120px', '90%'],
+               success: function (layero, index) {
+                view1("domedit1").render('house/z-house/edit', {
+                       id: id,
+                       ParentRoomid:ParentRoomid,
+                       layerindex:index
+                   });
+               }
+            });
         });
          
             });
@@ -422,6 +476,20 @@ function formatterzhouqi(value) {
                                
                               
                                </div>   
+                               <div class="title"> 
+                                <h3 class="red"> 图片信息</h3> 
+                               </div>
+                               <div class="layui-row" id="himage">
+                                   {{#  layui.each(d[2], function(index, item1){ }}
+                                     <div class="img-wrap">
+                                      <img class="house-img-all house-img hand" src="{{d.imgurl1}}{{item1}}" alt="{{item1}}">
+                                      <div class="opes">
+                                        <i class="layui-icon view">&#xe615;</i>
+                                        <i class="layui-icon download">&#xe601;</i>
+                                      </div>
+                                     </div>
+                                   {{# });   }}                          
+                              </div>
                          </form> 
                     </script>
                     <div id="house-edit-view">
