--- a/src/views/house/z-house/edit.html
+++ b/src/views/house/z-house/edit.html
@@ -1,7 +1,22 @@
 
 <link href="../../../../Content/Home.css" rel="stylesheet" />
 <link href="../../../../Content/hsc-form.css" rel="stylesheet" />
+<style>
+    .hand {
+    cursor: pointer;
+}
+img {
+    vertical-align: middle; border: 0;
+}.house-img {
+    height: 140px;
+    height: 140px;
+}
+.edit-house-info-dialog .house-img-all {
+    width: 100%;
+    height: 100%;
+}
 
+</style>
 <script>
         var imageurl="";
       function LoadData(id,tableid,layerindex){
