租客合同1366分辨率

--- a/src/views/contract/z-contract/index.html
+++ b/src/views/contract/z-contract/index.html
@@ -3,6 +3,11 @@
             position: absolute;
         }
        body{overflow-y: scroll;}
+       @media screen and (max-width: 1366px){
+        .m-search-item:nth-child(n + 5){
+            margin-top: 20px;
+        }
+       }
     </style>
     <title>租客合同</title>
     <script src="../../../Scripts/Contract_business.js"></script>
