--- a/src/views/contract/z-contract/index.html
+++ b/src/views/contract/z-contract/index.html
@@ -50,19 +50,25 @@
                      <div class="m-search-item">
                              <label class="layui-form-label" style="width: 40px;">市</label>
                              <div class="layui-input-inline" style="width: 90px;">
-                                 <select lay-filter="CityName" name="CityName"></select>
+                                 <select lay-filter="CityName" name="CityName">
+                                     <option value="">请选择</option>
+                                 </select>
                              </div>
                          </div>
                          <div class="m-search-item">
                              <label class="layui-form-label" style="width: 40px;">区</label>
                              <div class="layui-input-inline" style="width: 90px;">
-                                 <select lay-filter="AreaName" name="AreaName"></select>
+                                 <select lay-filter="AreaName" name="AreaName">
+                                     <option value="">请选择</option>
+                                 </select>
                              </div>
                          </div>
                          <div class="m-search-item">
                              <label class="layui-form-label" style="width: 40px;">小区</label>
                              <div class="layui-input-inline" style="width: 120px;">
-                                 <select lay-filter="CellName" name="CellName"></select>
+                                 <select lay-filter="CellName" name="CellName">
+                                     <option value="">请选择</option>
+                                 </select>
                              </div>
                          </div>
                     <div class="m-search-item">
