360兼容模式新增合同空白

--- a/src/views/contract/y-contract/add.html
+++ b/src/views/contract/y-contract/add.html
@@ -130,7 +130,7 @@
                     if($("#BeginTime").val()!=""){
                         debugger;
                         var dt = getDate($("#BeginTime").val());
-                        var newDate = doc.DateAdd("m",Number(idvalue),dt,);
+                        var newDate = doc.DateAdd("m",Number(idvalue),dt);
                       
                         $("#EndTime").val(util.toDateString(newDate,"yyyy-MM-dd"));
                     }
